kubernetes/mysql-product.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-product
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 31307 # exposed port we can communicate to
  selector:
    app: mysql-product
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-product
spec:
  selector:
    matchLabels:
      app: mysql-product
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-product
    spec:
      containers:
      - image: simonlechner/product-db
        name: mysql-product
        ports:
        - containerPort: 3306
          name: mysql-product
        volumeMounts:
        - name: mysql-persistent-storage-product
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage-product
        persistentVolumeClaim:
          claimName: mysql-pv-claim-product
