kubernetes/mysql-user.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-user
spec:
  type: NodePort
  ports:
  - port: 3306
    targetPort: 3306
    nodePort: 31306 # exposed port we can communicate to
  selector:
    app: mysql-user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-user
spec:
  selector:
    matchLabels:
      app: mysql-user
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-user
    spec:
      containers:
      - image: simonlechner/user-db
        name: mysql-user
        ports:
        - containerPort: 3306
          name: mysql-user
        volumeMounts:
        - name: mysql-persistent-storage-user
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage-user
        persistentVolumeClaim:
          claimName: mysql-pv-claim-user
