kubernetes/node-product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-product
  template:
    metadata:
      labels:
        app: node-product
    spec:
      containers:
        - name: node
          image: edzhuks/products
---
apiVersion: v1
kind: Service
metadata:
  name: node-product
spec:
  type: NodePort 
  selector:
    app: node-product
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
    nodePort: 30101
