kubernetes/node-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-user-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-user
  template:
    metadata:
      labels:
        app: node-user
    spec:
      containers:
        - name: node-user
          image: simonlechner/users
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: node-user
spec:
  type: NodePort 
  selector:
    app: node-user
  ports:
  - protocol: TCP
    port: 80 # expose the service on internal port 3000
    targetPort: 3002 # our NodeJS app listens on port 3000
    nodePort: 30100
