kubernetes/node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node
  template:
    metadata:
      labels:
        app: node
    spec:
      containers:
        - name: node
          image: simonlechner/product
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  type: NodePort 
  selector:
    app: node
  ports:
  - protocol: TCP
    port: 80 # expose the service on internal port 3000
    targetPort: 3001 # our NodeJS app listens on port 3000
    nodePort: 30100
