kubernetes/product.yaml
# Deployment & External service
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  labels:
    app: product-pod
spec:
  replicas: 1
  selector:
    matchLabels: # Defines which pods belongs to deployment (line 3)
      app: product-pod
  template: # template = Blueprint for the pod
    metadata:
      labels: # Label is required field for pods. Pods have unique name but they share the same label
        app: product-pod
    spec:
      containers:
      - name: product-pod
        image: project-product-db
        ports:
        - containerPort: 3001
--- # Defines new YAML section

apiVersion: v1
kind: Service
metadata:
  name: my-service # TODO fix this
spec:
  selector:
    app: product-pod
  ports:
    - protocol: TCP
      port: 3001 # Common standard that port === targetPort
      targetPort: 3001 # targetPort has to equal to pods containerPort
