kubernetes/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        - name: webapp
          image: vekkumasa/ds22:latest
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: webapp-service
spec:
  type: ClusterIP # ClusterIP is default value and it's for internal services, NodePort is external service
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000 # targetPort must match to containerPort
#      nodePort: 30000 # Value range is 30000 - 32767
