kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: beerbeer.info
    http:
      paths:
      - path: /client
        pathType: Prefix
        backend:
          service:
            name: webapp-service
            port:
              number: 3000

      - path: /products
        pathType: Prefix
        backend:
          service:
            name: node-product
            port:
              number: 3001
              
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: node-user
            port:
              number: 3002
